k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: medimate
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: medimate-backend
  template:
    metadata:
      labels:
        app: medimate-backend
    spec:
      containers:
      - name:  backend
        image: ubaid393/medimate-backend:v1
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: medimate
  name: pern-backend
spec:
  type: ClusterIP
  selector:
    app: medimate-backend  
  ports:
  - port: 3000
    targetPort: 3000
