k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: medimate
  name: medimate-statefulset
spec:
  selector:
    matchLabels:
      app: medimate-db # 0. must match
  serviceName: medimate-service # 3.
  replicas: 1
  template:
    metadata:
      labels:
        app: medimate-db # 0.
    spec:
      containers:
      - name: medimate-postgres # container name
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
          name: postgres #optional
        volumeMounts:
        - name: postgres-volume # 1. must match metadat.name in olumeClaimTemplates
          mountPath: /var/lib/postgresql/data #standard mount path for postgres 17 and below
  volumeClaimTemplates:
  - metadata:
      name: postgres-volume # 1. 
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  namespace: medimate
  name: medimate-service # 3. must match
spec:
  clusterIP: None
  selector:
    app: medimate-db # 0.
  ports:
  - port: 5432 # can be any port
    targetPort: 5432 # must match container port
