k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: medimate
  name: medimate-ingress
  labels:
    app.kubernetes.io/name: medimate-Ingress
spec:
  ingressClassName: nginx
  rules:
  - host: medimate.local
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: pern-backend
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
